@@ -5,6 +5,9 @@ new features:
   * readEot: import previously created EOT* files back into R. For that purpose, 
     file 'remote_eot_locations.csv' (created from functions eot() or writeEot()) 
     now includes pixel IDs of all leading modes.
+  * predict: included a proper 'filename' argument in addition to '...', thus 
+    allowing the user to specify further arguments passed to calc() and, at the 
+    same time, enabling layer-by-layer storage of the resulting Raster* images.
 
 bugfixes:
   * fixed warning message related to missing 'expl.var' object. 
